css/loccs.css
body {
    margin-top: 0px;
    margin-left: 0px;
    position: relative;
}

input {
    border: 0;
    margin: 0;
    padding: 0;
    background: transparent;
}

#grant_id {
    position: absolute;
    top: 320px;
    left: 43px;
    font-weight: bold;
    font-size: 14px;
    width:300px;
}

#service_period {
    position: absolute;
    top: 247px;
    left: 354px;
    font-weight: bold;
    font-size: 14px;
}

#provider {
    position: absolute;
    top: 160px;
    left: 588px;
    font-weight: bold;
    font-size: 14px;
    min-width: 300px;
}

#project {
    position: absolute;
    top: 185px;
    left: 588px;
    font-weight: bold;
    font-size: 14px;
    min-width: 300px;
}

#snaps {
    position: absolute;
    top: 600px;
    left: 43px;
    font-weight: bold;
    font-size: 14px;
    min-width: 300px;
}

#amount-inputs {
    position: absolute;
    top: 357px;
    right: 30px;
}

#amount-inputs > div {
    width: 150px;
    margin-bottom:0px;
    text-align: right;
}

#amount-inputs > div > input {
    text-align: right;
    background-color: transparent;
    height: 28px;
    width: 150px;
}

